fix entry-content overflow

--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ blockquote.right{
 	padding: 10px 0;
 	margin: 10px 0;
 	min-height: 100px;
+	overflow: hidden;
 	border-top: 1px solid #DDD;
 	border-bottom: 1px solid #DDD;
 }
